estructura de pagina

--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>colombia network</title>
+<link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Nombre del Sitio</h1>
+        <nav>
+            <a href="#">Inicio</a>
+            <a href="#">Acerca de</a>
+            <a href="#video2">Servicios</a>
+            <a href="#">Trabaja con nosotros</a>
+        </nav>
+    </header>
+    <div class="second-nav">
+        <h1>subtitulo</h1>
+    </div>
+    <container>
+        <section>
+            <h2>Sección 1 - Información</h2>
+            <p>Texto descriptivo sobre la primera sección.</p>
+            <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+        </section>
+        <section style="background-color: #f4f4f4;" id="video2">
+            <h2>Sección 2 - Información</h2>
+            <p>Texto descriptivo sobre la segunda sección.</p>
+            <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+        </section>
+    </container>
 </body>
 </html>
