--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Nombre del Sitio</h1>
+        <div class="logo"></div>
+            <img src="./media/COLOMBIA-NETWORK.png" alt="Logo del Sitio">
+        </div>
         <nav>
             <a href="#">Inicio</a>
             <a href="#">Acerca de</a>
@@ -22,14 +24,39 @@
     <container>
         <section>
             <h2>Sección 1 - Información</h2>
-            <p>Texto descriptivo sobre la primera sección.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi quo, sunt magnam rem totam odio numquam architecto tenetur harum expedita, fugiat quae est officia, nostrum fugit quibusdam debitis similique vero!.</p>
             <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
         </section>
         <section style="background-color: #f4f4f4;" id="video2">
             <h2>Sección 2 - Información</h2>
-            <p>Texto descriptivo sobre la segunda sección.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magni, nulla aperiam veritatis expedita, ullam nam blanditiis repudiandae quidem quibusdam praesentium laboriosam non dolore vel, ea ut. Minima, odit maxime..</p>
             <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
         </section>
     </container>
+    <div class="taste bt">
+        <div class="container1">
+            <div class="global">
+                <h2 class="h2-sub">
+                    <span class="fil">P</span>network Colombia
+                </h2>
+                <h1 class="head">RoyalPrestige</h1>
+            </div>
+            <marquee><a href="https://www.gifsanimados.org/cat-cocina-555.htm"><img src="./media/COLOMBIA-NETWORK.png" alt=""><img src="https://www.gifsanimados.org/data/media/555/cocina-imagen-animada-0076.gif" border="0" alt="cocina-imagen-animada-0076" /></a>
+            
+            </marquee>
+        </div>
+    </div>
+
+    <footer>
+        <div class="social-icons">
+            <a href="#" class="social-icon"><img src="./media/logo_facebook.png" alt="Facebook"></a>
+            <a href="#" class="social-icon"><img src="./media/logo_instagram.png" alt="Instagram"></a>
+            <a href="#" class="social-icon"><img src="./media/logo_twitter.png" alt="Twitter"></a>
+          </div>
+        <div class="email-form">
+          <input type="email" class="email-input" placeholder="Ingrese su correo electrónico">
+          <button class="register-button">Registrarse</button>
+        </div>
+      </footer>
 </body>
 </html>
