--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
             </div>
         </div>
     </div>
-
+    <marquee>
+        <h4 style='color:white;text-align:center;'>¡Bienvenido al sitio web de la empresa!</h4>
+        <img src="https://clipground.com/images/royal-prestige-logo-png-8.png" width="500" height="300" >
+    </marquee>
 
     <footer>
         <div class="social-icons">
