--- a/index.html
+++ b/index.html
@@ -8,29 +8,25 @@
 <link rel="stylesheet" href="./styles/index.css">
 <!-- Enlace a la hoja de estilos de Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  
-<!-- Enlace a jQuery (requerido por Bootstrap) -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-
-<!-- Enlace a la biblioteca JavaScript de Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
-
 </head>
 <body>
     <header>
-        <div class="logo"></div>
+        <div class="logo">
             <img src="./media/COLOMBIA-NETWORK.png" alt="Logo de Network Colombia">
         </div>
         <nav>
             <a href="#">Inicio</a>
-            <a href="#carousel-container">Acerca de</a>
-            <a href="#videos">Servicios</a>
-            <a href="#">Trabaja con nosotros</a>
         </nav>
     </header>
 
-    
-    
+    <div class="card text-bg-dark">
+        <img src="..." class="card-img" alt="...">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+        </div>
+      </div>
     <div class="second-nav">
         <h1>subtitulo</h1>
     </div>
@@ -123,6 +119,9 @@
 -->
       </footer>
 </body>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  
+<!-- Enlace a jQuery (requerido por Bootstrap) -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<!-- Enlace a la biblioteca JavaScript de Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
 </html>
