--- a/index.html
+++ b/index.html
@@ -16,21 +16,20 @@
     <nav class="navbar border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="https://colombianetwork10.com/tienda/">
-                <img src="/media/COLOMBIA-NETWORK.png" alt="Bootstrap" width="200" height="70">
+                <img src="./media/COLOMBIA-NETWORK.png" alt="Bootstrap" width="200" height="70">
             </a>
             <a class="navbar-brand navbar" href="https://colombianetwork10.com/tienda/">INICIO</a>
         </div>
     </nav>
-
-    <div class="card text-bg-dark">
-        <img class="imagen-asesor" src="/media/banner1.png" class="card-img" alt="Asesor comercial" height="550">
-        <div class="card-img-overlay">
-          <h5 class="titulo-primer-baner card-title">¿Quieres un equilibrio entre trabajo y vida personal?,¿Eres un apasionado de las ventas y buscas independencia? Únete a nosotros como asesor comercial y elige tu propio camino hacia el éxito.</h5>
-          <button type="button" class="btn btn-primary" href="https://forms.gle/244JG8tBGjci7SZ38">
-            <a class="navbar-brand navbar" href="https://forms.gle/244JG8tBGjci7SZ38">¡Inicia Ya!</a></button>
+    <!--FIRST BANNER-->
+    <div class="card text-justify">
+        <img class="imagen-asesor" src="./media/banner1.png" class="card-img" alt="Asesor comercial" height="550">
+        <div class="card-img-overlay card-banner">
+            <h5 class="card-title">¿Quieres un equilibrio entre trabajo y vida personal?<br><spam>¿Eres un apasionado de las ventas y buscas independencia?</spam><br> Únete a nosotros como asesor comercial y elige tu propio camino hacia el <spam>éxito</spam>.</h5>
+            <a href="https://forms.gle/244JG8tBGjci7SZ38" class="btn btn-primary btn-lg">¡Inicia Ya!</a> 
         </div>
     </div>
-
+    <!--Titulos-->
     <div class="second-nav">
         <h1>subtitulo</h1>
     </div>
