arreglo de acordion

--- a/index.html
+++ b/index.html
@@ -133,53 +133,53 @@
     <div class="second-nav">
         <h1>Preguntas Frecuentes</h1>
     </div>
+    <br>
     <!--Acordion de preguntas frecuentes-->
     <div class="accordion accordion-flush" id="accordionFlushExample">
         <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                Cuanto ganaría trabajando en la empresa?
-            </button>
-          </h2>
-          <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Ganarias por comisiones sin techo (ingresos adicionales), oportunidad de ganar mucho mas que un salario minimo. </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                Es multinivel?
-            </button>
-          </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">No, ya que es una compañía dedicada para fomentar el emprendimiento de todos sus integrantes y tus ingresos dependerán de tus capacidades en ventas.</div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                Donde esta registrada la empresa?
-            </button>
-          </h2>
-          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Esta registrada en Bogota en Camara de comercio. Como empresa dedicada a las ventas.</div>
-          </div>
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    Cuanto ganaría trabajando en la empresa?
+                </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Ganarías por comisiones sin techo (ingresos adicionales), oportunidad de ganar mucho más que un salario mínimo.</div>
+            </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                Debo cumplir algún horario?
-              </button>
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    Es multinivel?
+                </button>
             </h2>
-            <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">No, pero mientras mayor tiempo le puedas dedicar a tu emprendimiento puedes generar mas ingresos.
-            </div>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">No, ya que es una compañía dedicada para fomentar el emprendimiento de todos sus integrantes y tus ingresos dependerán de tus capacidades en ventas.</div>
             </div>
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    En que ciudades puedo generar mi actividad económica?
+                    Donde está registrada la empresa?
+                </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Está registrada en Bogotá en la Cámara de Comercio como empresa dedicada a las ventas.</div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                    Debo cumplir algún horario?
+                </button>
+            </h2>
+            <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">No, pero mientras más tiempo le puedas dedicar a tu emprendimiento, puedes generar más ingresos.</div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                    En qué ciudades puedo generar mi actividad económica?
                 </button>
             </h2>
             <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -188,15 +188,16 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
                     Las capacitaciones tienen algún costo?
                 </button>
             </h2>
             <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">  No, todas las capacitaciones son totalmente gratis, a la empresa le interesa mucho que todos sus integrantes tengan conocimientos solidos y continuos. Llegando a lograr ser un buen profesional.</div>
+                <div class="accordion-body">No, todas las capacitaciones son totalmente gratis, a la empresa le interesa mucho que todos sus integrantes tengan conocimientos sólidos y continuos. Llegando a lograr ser un buen profesional.</div>
             </div>
-        </div>            
+        </div>
     </div>
+    
 
     <marquee>
         <h4 style='color:white;text-align:center;'>¡Bienvenido al sitio web de la empresa!</h4>
