cambio de logos

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <nav class="navbar border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="https://colombianetwork10.com/tienda/">
-                <img src="./media/COLOMBIA-NETWORK.png" alt="Bootstrap" width="200" height="70">
+                <img id="logo" src="./media/colombia-network2.jpeg" alt="Bootstrap" width="200" height="70">
             </a>
-            <a class="navbar-brand navbar" href="https://colombianetwork10.com/tienda/">INICIO</a>
+            <a class="navbar-brand navbar" href="#casos-de-exito">CASOS DE EXITO</a>
         </div>
     </nav>
     <!--FIRST BANNER-->
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="mb-3 second-card" style="max-width: 18rem;">
+        <div id="casos-de-exito" class="mb-3 second-card" style="max-width: 18rem;">
             <div class="card-body card-second text-primary text-center">
               <h5 class="card-title">"Clientes satisfechos y relaciones duraderas con la empresa."</h5>
               <p class="card-text">Andres Patiño</p>
@@ -201,7 +201,7 @@
 
     <marquee>
         <h4 style='color:white;text-align:center;'>¡Bienvenido al sitio web de la empresa!</h4>
-        <img src="./media/carousel6.png" width="400" height="200" >
+        <img src="./media/colombia-network1.jpeg" width="400" height="200" >
     </marquee>
 
     <footer>
